--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Interactive Animation with JavaScript &amp; CSS</h1>
     
     <div class="image-container">
-      <img src="https://via.placeholder.com/150" id="animatedImage" alt="Placeholder image">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Soccer_ball.svg" id="animatedImage" alt="Placeholder image">
     </div>
     
     <button id="bounceButton">Click to Bounce</button>
